--- a/test-2.html
+++ b/test-2.html
@@ -72,8 +72,10 @@
                 </div>
             </div>
             <div class="col-md-8">
-                <video controls="true"></video>
+                <video controls="true" id="myvideo"></video>
             </div>
+
+            <button id="jump">Jump to 7</button>
         </div>
         <div class="row">
             <div class="col-md-12">
@@ -86,6 +88,19 @@
     </div>
 </main>
 
+<script>
+    var myvideo = document.getElementById('myvideo'),
+    playbutton = document.getElementById('playme'),
+    jumplink = document.getElementById('jump');
+
+jumplink.addEventListener("click", function (event) {
+    event.preventDefault();
+    myvideo.play();
+    myvideo.pause();
+    myvideo.currentTime = 70;
+    myvideo.play();
+}, false);
+</script>
 
 <script>
     document.addEventListener('DOMContentLoaded', function () {
