--- a/test-4.html
+++ b/test-4.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <body>
-  <iframe src="https://player.vdocipher.com/v2/?otp=20160313versUSE323F4pbyD36CKKFRN5eupHV5Zzfut6cZx5NfcLQlmZb3DUpti&playbackInfo=eyJ2aWRlb0lkIjoiYjAxYzRkNDhhMjI0NDM1N2I2YzZlZDEyYTBlNzkwMGQifQ==" style="border:0;height:360px;width:640px;max-width:100%" allowFullScreen="true" allow="encrypted-media"></iframe>
+  <iframe src="https://player.vdocipher.com/v2/" style="border:0;height:360px;width:640px;max-width:100%" allowFullScreen="true" allow="encrypted-media"></iframe>
 </body>
 
 </html>
